--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
   </head>
   <body data-spy="scroll" data-target="#navbar" data-offset="57">
      <!-- header -->
-    <nav class="navbar navbar-expand-lg sticky-top navbar-dark bg-dark">
+    <nav id="header" class="navbar navbar-expand-lg sticky-top navbar-dark bg-dark">
             <div class="container">
             <a class="navbar-brand" href="#">Conf Hawaii</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
             </button>
         
